WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171068
Fix a PassKit function declaration typo
https://bugs.webkit.org/show_bug.cgi?id=171068
Summary
Fix a PassKit function declaration typo
Anders Carlsson
Reported
2017-04-20 12:11:59 PDT
Fix a PassKit function declaration typo
Attachments
Patch
(4.07 KB, patch)
2017-04-20 12:24 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-04-20 12:24:38 PDT
Created
attachment 307611
[details]
Patch
Anders Carlsson
Comment 2
2017-04-20 12:34:25 PDT
Committed
r215569
: <
http://trac.webkit.org/changeset/215569
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug