Fix a PassKit function declaration typo https://bugs.webkit.org/show_bug.cgi?id=171068 rdar://problem/31635008

Reviewed by Tim Horton.

* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::WebPaymentCoordinatorProxy::platformCanMakePaymentsWithActiveCard):

Canonical link: https://commits.webkit.org/187974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215569 268f45cc-cd09-0410-ab3c-d52691b4dbfc